tests/Tuc/Fixtures/errors/UndefinedComponentParticipantInDomain.tuc
tuc parse error test
participants
    StreamComponent parts
        StreamListener as "Stream Listener"
        [ActivityStream] as "Activity Stream"
